trained weights added

--- a/model_trainer.ipynb
+++ b/model_trainer.ipynb
@@ -384,19 +384,7 @@
     }
    ],
    "source": [
-    "keras.utils.plot_model(model, to_file='model_architecture.png') #saving the model architecture in an image form\n",
-    "\n",
-    "model.summary()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compile the model\n",
-    "model.compile(loss= \"categorical_crossentropy\",optimizer= \"adam\",metrics = [\"accuracy\"])"
+    "model.summary()"
    ]
   },
   {
@@ -494,22 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\asus\\anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:1817: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "INFO:tensorflow:Assets written to: trial_model\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.save(\"trial_model\")"
+    "model.save_weights(\"trial_model.h5\")"
    ]
   },
   {
