--- a/model_trainer.ipynb
+++ b/model_trainer.ipynb
@@ -14,15 +14,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import keras\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import pydot\n",
-    "import cv2\n",
-    "from data_loader import load_dataset\n",
-    "from models import load_trial_model"
+    "\n",
+    "from models import trial_model, alexnet_model"
    ]
   },
   {
@@ -38,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset()"
+    "dataset = pd.read_csv(r\"./facial_expressions/image_emotion.csv\")"
    ]
   },
   {
@@ -176,8 +173,8 @@
        "SADNESS       144\n",
        "sadness       124\n",
        "ANGER          24\n",
-       "disgust        13\n",
        "fear           13\n",
+       "disgust        13\n",
        "SURPRISE       12\n",
        "contempt        9\n",
        "FEAR            8\n",
@@ -277,14 +274,14 @@
     "                                              directory= \"./facial_expressions/images\",\n",
     "                                              x_col=\"image\", y_col = \"emotion\",\n",
     "                                              target_size = (350,350),\n",
-    "                                              subset = \"training\")  \n",
+    "                                              subset = \"training\", batch_size = 64)  \n",
     "\n",
     "#Access validation images from directory marked to their class labels in dataframe\n",
     "validation_generator = datagen.flow_from_dataframe(dataframe = train_data,\n",
     "                                                   directory= \"./facial_expressions/images\",\n",
     "                                                   x_col=\"image\", y_col = \"emotion\",\n",
     "                                                   target_size = (350,350),\n",
-    "                                                   subset= \"validation\")\n",
+    "                                                   subset= \"validation\",batch_size = 64)\n",
     "\n",
     "#Access test images from directory marked to their class labels in dataframe\n",
     "test_generator = test_datagen.flow_from_dataframe(dataframe = test_data,\n",
@@ -327,16 +324,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the trial model"
+    "# Alexnet Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 85, 85, 48)        17472     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 85, 85, 48)        192       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 85, 85, 48)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 42, 42, 48)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 42, 42, 128)       153728    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 42, 42, 128)       512       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 42, 42, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 20, 20, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 20, 20, 192)       221376    \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 20, 20, 192)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 20, 20, 192)       331968    \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 20, 20, 192)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 20, 20, 128)       221312    \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 20, 20, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 9, 9, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 10368)             0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 1024)              10617856  \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 1024)              4096      \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              1049600   \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 1024)              4096      \n",
+      "_________________________________________________________________\n",
+      "activation_6 (Activation)    (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 8)                 8200      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 8)                 32        \n",
+      "_________________________________________________________________\n",
+      "activation_7 (Activation)    (None, 8)                 0         \n",
+      "=================================================================\n",
+      "Total params: 12,630,440\n",
+      "Trainable params: 12,625,976\n",
+      "Non-trainable params: 4,464\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "model = load_trial_model((350,350,3), num_outputs)"
+    "model = alexnet_model((350,350,3), num_outputs)\n",
+    "model.summary()"
    ]
   },
   {
@@ -350,143 +413,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 173, 173, 32)      2432      \n",
-      "_________________________________________________________________\n",
-      "batch_normalization (BatchNo (None, 173, 173, 32)      128       \n",
-      "_________________________________________________________________\n",
-      "activation (Activation)      (None, 173, 173, 32)      0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 86, 86, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 41, 41, 64)        51264     \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_1 (Batch (None, 41, 41, 64)        256       \n",
-      "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 41, 41, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 20, 20, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 25600)             0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 512)               13107712  \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 8)                 4104      \n",
-      "=================================================================\n",
-      "Total params: 13,165,896\n",
-      "Trainable params: 13,165,704\n",
-      "Non-trainable params: 192\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Epoch 1/20\n",
-      "100/100 [==============================] - 29s 294ms/step - loss: 4.0940 - accuracy: 0.5903 - val_loss: 2.0174 - val_accuracy: 0.4759\n",
+      "100/100 [==============================] - 19s 188ms/step - loss: 2.1042 - accuracy: 0.3137 - val_loss: 4.7271 - val_accuracy: 0.0122\n",
       "Epoch 2/20\n",
-      "100/100 [==============================] - 32s 318ms/step - loss: 1.2493 - accuracy: 0.6644 - val_loss: 2.7186 - val_accuracy: 0.4384\n",
+      "100/100 [==============================] - 63s 625ms/step - loss: 1.7583 - accuracy: 0.5175 - val_loss: 1.1962 - val_accuracy: 0.5558\n",
       "Epoch 3/20\n",
-      "100/100 [==============================] - 33s 329ms/step - loss: 1.0965 - accuracy: 0.6883 - val_loss: 0.7652 - val_accuracy: 0.7350\n",
+      "100/100 [==============================] - 28s 282ms/step - loss: 1.4639 - accuracy: 0.6775 - val_loss: 1.4257 - val_accuracy: 0.5363\n",
       "Epoch 4/20\n",
-      "100/100 [==============================] - 29s 290ms/step - loss: 0.7875 - accuracy: 0.7291 - val_loss: 0.7741 - val_accuracy: 0.7613\n",
+      "100/100 [==============================] - 18s 183ms/step - loss: 1.3882 - accuracy: 0.6587 - val_loss: 1.3166 - val_accuracy: 0.6069\n",
       "Epoch 5/20\n",
-      "100/100 [==============================] - 29s 291ms/step - loss: 0.6569 - accuracy: 0.7681 - val_loss: 0.8314 - val_accuracy: 0.6985\n",
+      "100/100 [==============================] - 19s 189ms/step - loss: 1.3177 - accuracy: 0.6637 - val_loss: 1.4687 - val_accuracy: 0.5343\n",
       "Epoch 6/20\n",
-      "100/100 [==============================] - 33s 331ms/step - loss: 0.6351 - accuracy: 0.7756 - val_loss: 0.7930 - val_accuracy: 0.7038\n",
+      "100/100 [==============================] - 20s 199ms/step - loss: 1.2085 - accuracy: 0.7212 - val_loss: 1.1688 - val_accuracy: 0.6405\n",
       "Epoch 7/20\n",
-      "100/100 [==============================] - 30s 298ms/step - loss: 0.6442 - accuracy: 0.7745 - val_loss: 0.7665 - val_accuracy: 0.6946\n",
+      "100/100 [==============================] - 22s 217ms/step - loss: 1.0671 - accuracy: 0.7337 - val_loss: 1.5607 - val_accuracy: 0.4983\n",
       "Epoch 8/20\n",
-      "100/100 [==============================] - 30s 299ms/step - loss: 0.5793 - accuracy: 0.7921 - val_loss: 0.6840 - val_accuracy: 0.7662\n",
+      "100/100 [==============================] - 21s 207ms/step - loss: 1.0280 - accuracy: 0.7412 - val_loss: 2.6734 - val_accuracy: 0.4131\n",
       "Epoch 9/20\n",
-      "100/100 [==============================] - 91s 905ms/step - loss: 0.5355 - accuracy: 0.8031 - val_loss: 0.7436 - val_accuracy: 0.7457\n",
+      "100/100 [==============================] - 20s 202ms/step - loss: 0.9758 - accuracy: 0.7325 - val_loss: 1.5864 - val_accuracy: 0.4720\n",
       "Epoch 10/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.5341 - accuracy: 0.8078 - val_loss: 0.6630 - val_accuracy: 0.7638\n",
+      "100/100 [==============================] - 21s 205ms/step - loss: 0.9464 - accuracy: 0.7425 - val_loss: 0.9724 - val_accuracy: 0.6620\n",
       "Epoch 11/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.5223 - accuracy: 0.8081 - val_loss: 0.5863 - val_accuracy: 0.7949\n",
+      "100/100 [==============================] - 20s 196ms/step - loss: 0.8724 - accuracy: 0.7538 - val_loss: 1.1657 - val_accuracy: 0.5952\n",
       "Epoch 12/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4730 - accuracy: 0.8309 - val_loss: 0.5867 - val_accuracy: 0.8018\n",
+      "100/100 [==============================] - 50s 497ms/step - loss: 0.9519 - accuracy: 0.7362 - val_loss: 1.2698 - val_accuracy: 0.6683\n",
       "Epoch 13/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4671 - accuracy: 0.8304 - val_loss: 0.6984 - val_accuracy: 0.7399\n",
+      "100/100 [==============================] - 52s 521ms/step - loss: 0.8519 - accuracy: 0.7591 - val_loss: 0.8694 - val_accuracy: 0.7599\n",
       "Epoch 14/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4511 - accuracy: 0.8356 - val_loss: 0.7207 - val_accuracy: 0.7745\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.8235 - accuracy: 0.7638 - val_loss: 0.8011 - val_accuracy: 0.7691\n",
       "Epoch 15/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4392 - accuracy: 0.8481 - val_loss: 0.6841 - val_accuracy: 0.7735\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.8503 - accuracy: 0.7675 - val_loss: 0.7916 - val_accuracy: 0.7540\n",
       "Epoch 16/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4141 - accuracy: 0.8456 - val_loss: 0.9965 - val_accuracy: 0.6503\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.7267 - accuracy: 0.7937 - val_loss: 0.7503 - val_accuracy: 0.7759\n",
       "Epoch 17/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.4146 - accuracy: 0.8482 - val_loss: 0.6646 - val_accuracy: 0.7769\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.8033 - accuracy: 0.7688 - val_loss: 0.9443 - val_accuracy: 0.7565\n",
       "Epoch 18/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.3624 - accuracy: 0.8674 - val_loss: 0.7509 - val_accuracy: 0.7443\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.7571 - accuracy: 0.7800 - val_loss: 0.8288 - val_accuracy: 0.7180\n",
       "Epoch 19/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.3462 - accuracy: 0.8741 - val_loss: 0.6027 - val_accuracy: 0.8105\n",
+      "100/100 [==============================] - 105s 1s/step - loss: 0.7288 - accuracy: 0.7725 - val_loss: 0.7041 - val_accuracy: 0.7764\n",
       "Epoch 20/20\n",
-      "100/100 [==============================] - 126s 1s/step - loss: 0.3297 - accuracy: 0.8808 - val_loss: 0.6352 - val_accuracy: 0.7906\n"
+      "100/100 [==============================] - 105s 1s/step - loss: 0.6814 - accuracy: 0.8025 - val_loss: 0.6827 - val_accuracy: 0.7915\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x193b8c724c8>"
+       "<tensorflow.python.keras.callbacks.History at 0x209d42bc508>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train the model\n",
     "model.fit(train_generator,\n",
     "          steps_per_epoch=100,\n",
     "          epochs = 20,\n",
     "          validation_data = validation_generator\n",
-    "         )\n"
+    "         )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "107/107 [==============================] - 13s 122ms/step - loss: 0.6344 - accuracy: 0.7894\n",
-      "Accuracy on test set: 0.7893660664558411\n"
+      "107/107 [==============================] - 66s 617ms/step - loss: 0.6537 - accuracy: 0.8008\n",
+      "Accuracy on test set: 0.8007595539093018\n"
      ]
     }
    ],
    "source": [
+    "# get accuracy on test set\n",
     "pred = model.evaluate(test_generator)\n",
     "print(\"Accuracy on test set:\", pred[1])\n",
-    "#print(np.argmax(model.predict(test_generator),axis =1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save_weights(\"trial_model.h5\")"
+    "\n",
+    "# save the trained weights\n",
+    "model.save_weights(\"alexnet_model.h5\")"
    ]
   },
   {
